--- a/Eduversity.com/Client/Pages/Admin/Faculties/Faculties.razor
+++ b/Eduversity.com/Client/Pages/Admin/Faculties/Faculties.razor
@@ -16,95 +16,107 @@
     }
     else
     {
-        <button class="btn btn-primary float-end mb-3" @onclick="CreateFaculty">
-            <i class="oi oi-plus"></i> Add New Faculty
-        </button>
-        <table class="table table-striped table-sm border">
-            <thead>
-                <tr>
-                    <th width="20px"></th>
-                    <th>Faculty</th>
-                    <th style="text-align:center">Active</th>
-                    <th style="text-align:center">Edit Faculty</th>
-                    <th style="text-align:center">View Depts.</th>
-                </tr>
-            </thead>
-            <tbody class="@toggleService.NavMenuCssClass">
-                <Virtualize Items="facultyService.AdminFaculties" Context="faculty">
-                    <tr>
-                        <td width="5px">
-                            <div class="row">
-                                <a class="nav-link px-1" @onclick="() => toggleService.TogleSubmenu(faculty.Id)">
-                                    @if (faculty.Id == toggleService.NavSubmenuId && faculty.Departments.Count != 0)
-                                    {
-                                        <span class="oi oi-minus" aria-hidden="true"></span>
-                                    }
-                                    else if (faculty.Departments.Count != 0)
-                                    {
-                                        <span class="oi oi-plus" aria-hidden="true"></span>
-                                    }
-                                </a>
-                            </div>
-                        </td>
-                        <td>
-                            <span>@faculty.Name - (@faculty.Abbreviation)</span>
-                            <div class="row px-6">
-                                @if (faculty.Id == toggleService.NavSubmenuId)
-                                {
-                                    @if (faculty.Departments.Count != 0)
-                                    {
-                                        <table class="table table-striped table-sm border">
-                                            <thead>
-                                                <tr class="px-10">
-                                                    <th>Departments</th>
-                                                    <th style="text-align:center">Active</th>
-                                                    <th style="text-align:center">Edit</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var department in faculty.Departments)
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">
+                    List of Faculties
+
+                    <button class="btn btn-primary btn-sm float-end" @onclick="CreateFaculty">
+                        <i class="oi oi-plus"></i> Add New Faculty
+                    </button>
+                </h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped border">
+                        <thead class="bg-light">
+                            <tr>
+                                <th></th>
+                                <th>Faculty</th>
+                                <th style="text-align:center">Active</th>
+                                <th style="text-align:center">Edit Faculty</th>
+                                <th style="text-align:center">View Depts.</th>
+                            </tr>
+                        </thead>
+                        <tbody class="@toggleService.NavMenuCssClass">
+                            <Virtualize Items="facultyService.AdminFaculties" Context="faculty">
+                                <tr>
+                                    <td>
+                                        <div class="row text-center">
+                                            <a class="nav-link px-1" @onclick="() => toggleService.TogleSubmenu(faculty.Id)">
+                                                @if (faculty.Id == toggleService.NavSubmenuId && faculty.Departments.Count != 0)
                                                 {
-                                                    <tr>
-                                                        <td>
-                                                            <span>@department.Name - (@department.Abbreviation)</span>
-                                                        </td>
-                                                        <td style="text-align:center">
-                                                            <span>@(department.IsActive ? "✔️" : "❌")</span>
-                                                        </td>
-                                                        <td style="text-align:center">
-                                                            <span>
-                                                                <a class="text-primary" title="Edit Department" @onclick="(() => EditDepartment(department.Id))">
-                                                                    <i class="oi oi-pencil"></i>
-                                                                </a>
-                                                            </span>
-                                                        </td>
-                                                    </tr>
+                                                    <span class="oi oi-minus" aria-hidden="true"></span>
                                                 }
-                                            </tbody>
-                                        </table>
-                                    }
-                                }
-                            </div>
-                        </td>
-                        <td class="my-text-align-center">@(faculty.IsActive ? "✔️" : "❌")</td>
-                        <td class="my-text-align-center">
-                            <button class="btn btn-primary btn-sm" @onclick="(() => EditFaculty(faculty.Id))" title="Edit Faculty">
-                                <i class="oi oi-pencil"></i>
-                            </button>
-                        </td>
-                        <td style="text-align:center">
-                            <button class="btn btn-success btn-sm position-relative" @onclick="(() => ViewDepartments(faculty.Id))" title="View Departments">
-                                <i class="oi oi-eye"></i>
-                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: teal;">
-                                    @faculty.Departments.Count
-                                    <span class="visually-hidden">unread messages</span>
-                                </span>
-                            </button>
-                        </td>
-                    </tr>
-                </Virtualize>
-            </tbody>
-        </table>
+                                                else if (faculty.Departments.Count != 0)
+                                                {
+                                                    <span class="oi oi-plus" aria-hidden="true"></span>
+                                                }
+                                            </a>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <span>@faculty.Name - (@faculty.Abbreviation)</span>
+                                        <div class="row px-3">
+                                            @if (faculty.Id == toggleService.NavSubmenuId)
+                                            {
+                                                @if (faculty.Departments.Count != 0)
+                                                {
+                                                    <table class="table table-striped table-sm border">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Departments</th>
+                                                                <th style="text-align:center">Active</th>
+                                                                <th style="text-align:center">Edit</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @foreach (var department in faculty.Departments)
+                                                            {
+                                                                <tr>
+                                                                    <td>
+                                                                        <span>@department.Name - (@department.Abbreviation)</span>
+                                                                    </td>
+                                                                    <td style="text-align:center">
+                                                                        <span>@(department.IsActive ? "✔️" : "❌")</span>
+                                                                    </td>
+                                                                    <td style="text-align:center">
+                                                                        <span>
+                                                                            <a class="text-primary" title="Edit Department" @onclick="(() => EditDepartment(department.Id))">
+                                                                                <i class="oi oi-pencil"></i>
+                                                                            </a>
+                                                                        </span>
+                                                                    </td>
+                                                                </tr>
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                }
+                                            }
+                                        </div>
+                                    </td>
+                                    <td class="my-text-align-center">@(faculty.IsActive ? "✔️" : "❌")</td>
+                                    <td class="my-text-align-center">
+                                        <button class="btn btn-primary btn-sm" @onclick="(() => EditFaculty(faculty.Id))" title="Edit Faculty">
+                                            <i class="oi oi-pencil"></i>
+                                        </button>
+                                    </td>
+                                    <td style="text-align:center">
+                                        <button class="btn btn-success btn-sm position-relative" @onclick="(() => ViewDepartments(faculty.Id))" title="View Departments">
+                                            <i class="oi oi-eye"></i>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: teal;">
+                                                @faculty.Departments.Count
+                                                <span class="visually-hidden">unread messages</span>
+                                            </span>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </Virtualize>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     }
 </div>
 
