--- a/Eduversity.com/Client/Pages/Admin/Countries/LGAs.razor
+++ b/Eduversity.com/Client/Pages/Admin/Countries/LGAs.razor
@@ -17,47 +17,57 @@
     }
     else
     {
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToCountries())">
-            Countries
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary float-end mb-3 mx-3" @onclick="@(() => BackToStates(CountryId))">
-            States
-            <i class="oi oi-caret-right"></i>
-        </button>
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">
+                    List of LGAs in @StateName, @CountryName.
 
-        <table class="table table-striped table-sm border">
-            <thead>
-                <tr>
-                    <th>LGA</th>
-                    <th style="text-align:center">Active</th>
-                    <th style="text-align:center">Edit LGA</th>
-                </tr>
-            </thead>
-            <tbody class="@toggleService.NavMenuCssClass">
-                <Virtualize Items="lgaService.AdminResponse.LGAs" Context="lga">
-                    <tr>
-                        <td>@lga.Name</td>
-                        <td style="text-align:center">@(lga.IsActive ? "✔️" : "❌")</td>
-                        <td class="my-text-align-center">
-                            <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditLGA(lga.Id))" title="Edit LGA">
-                                <i class="oi oi-pencil"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </Virtualize>
-            </tbody>
-        </table>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToCountries())">
+                        Countries
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mx-3" @onclick="@(() => BackToStates(CountryId))">
+                        States
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                </h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped border">
+                        <thead class="bg-light">
+                            <tr>
+                                <th>LGA</th>
+                                <th style="text-align:center">Active</th>
+                                <th style="text-align:center">Edit LGA</th>
+                            </tr>
+                        </thead>
+                        <tbody class="@toggleService.NavMenuCssClass">
+                            <Virtualize Items="lgaService.AdminResponse.LGAs" Context="lga">
+                                <tr>
+                                    <td>@lga.Name</td>
+                                    <td style="text-align:center">@(lga.IsActive ? "✔️" : "❌")</td>
+                                    <td class="my-text-align-center">
+                                        <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditLGA(lga.Id))" title="Edit LGA">
+                                            <i class="oi oi-pencil"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </Virtualize>
+                        </tbody>
+                    </table>
 
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToCountries())">
-            Countries
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary float-end mb-3 mx-3" @onclick="@(() => BackToStates(CountryId))">
-            States
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <br /><br />
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToCountries())">
+                        Countries
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3 mx-3" @onclick="@(() => BackToStates(CountryId))">
+                        States
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     }
 </div>
 
