--- a/Eduversity.com/Client/Pages/Admin/Faculties/DepartmentOptions.razor
+++ b/Eduversity.com/Client/Pages/Admin/Faculties/DepartmentOptions.razor
@@ -11,54 +11,62 @@
 
     @if (loading)
     {
-      @*  <span>@message</span>*@
+        @*  <span>@message</span>*@
         <Loading Message=@message></Loading>
     }
     else
     {
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToFaculties())">
-            Faculties
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary float-end mb-3 mx-3" @onclick="@(() => BackToDepartments(FacultyId))">
-            Depts...
-            <i class="oi oi-caret-right"></i>
-        </button>
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">
+                    List of Options in @DepartmentName
 
-        <table class="table table-striped table-sm border">
-            <thead>
-                <tr>
-                    <th>Option</th>
-                    <th style="text-align:center">Active</th>
-                    <th style="text-align:center">Edit Option</th>
-                </tr>
-            </thead>
-            <tbody class="@toggleService.NavMenuCssClass">
-                <Virtualize Items="departmentOptionService.AdminResponse.Options" Context="option">
-                    <tr>
-                        <td>@option.Name - (@option.Abbreviation)</td>
-                        <td style="text-align:center">@(option.IsActive ? "✔️" : "❌")</td>
-                        <td class="my-text-align-center">
-                            <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditOption(option.Id))" title="Edit LGA">
-                                <i class="oi oi-pencil"></i>
-                            </button>
-                        </td>
-                    </tr>
-                </Virtualize>
-            </tbody>
-        </table>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToFaculties())">
+                        Faculties
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mx-3" @onclick="@(() => BackToDepartments(FacultyId))">
+                        Depts...
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                </h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped border">
+                        <thead class="bg-light">
+                            <tr>
+                                <th>Option</th>
+                                <th style="text-align:center">Active</th>
+                                <th style="text-align:center">Edit Option</th>
+                            </tr>
+                        </thead>
+                        <tbody class="@toggleService.NavMenuCssClass">
+                            <Virtualize Items="departmentOptionService.AdminResponse.Options" Context="option">
+                                <tr>
+                                    <td>@option.Name - (@option.Abbreviation)</td>
+                                    <td style="text-align:center">@(option.IsActive ? "✔️" : "❌")</td>
+                                    <td class="my-text-align-center">
+                                        <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditOption(option.Id))" title="Edit LGA">
+                                            <i class="oi oi-pencil"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </Virtualize>
+                        </tbody>
+                    </table>
 
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToFaculties())">
-            Faculties
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <button type="button" class="btn btn-outline-primary float-end mb-3 mx-3" @onclick="@(() => BackToDepartments(FacultyId))">
-            Depts...
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <br />
-
-        <br />
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToFaculties())">
+                        Faculties
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3 mx-3" @onclick="@(() => BackToDepartments(FacultyId))">
+                        Depts...
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     }
 </div>
 
