--- a/Eduversity.com/Client/Pages/Admin/Faculties/Departments.razor
+++ b/Eduversity.com/Client/Pages/Admin/Faculties/Departments.razor
@@ -16,101 +16,111 @@
     }
     else
     {
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToFaculties())">
-            Faculties
-            <i class="oi oi-caret-right"></i>
-        </button>
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">
+                    List of Departments in @FacultyName
 
-        <table class="table table-striped table-sm border">
-            <thead>
-                <tr>
-                    <th width="20px"></th>
-                    <th>Department</th>
-                    <th style="text-align:center">Active</th>
-                    <th style="text-align:center">Edit Depts</th>
-                    <th style="text-align:center">View Opts</th>
-                </tr>
-            </thead>
-            <tbody class="@toggleService.NavMenuCssClass">
-                <Virtualize Items="departmentService.AdminResponse.Departments" Context="departments">
-                    <tr>
-                        <td width="5px">
-                            <div>
-                                <a class="nav-link px-1" @onclick="() => toggleService.TogleSubmenu(departments.Id)">
-                                    @if (departments.Id == toggleService.NavSubmenuId && departments.Options.Count != 0)
-                                    {
-                                        <span class="oi oi-minus" aria-hidden="true"></span>
-                                    }
-                                    else if (departments.Options.Count != 0)
-                                    {
-                                        <span class="oi oi-plus" aria-hidden="true"></span>
-                                    }
-                                </a>
-                            </div>
-                        </td>
-                        <td>
-                            <span>@departments.Name - (@departments.Abbreviation)</span>
-                            <div class="px-6">
-                                @if (departments.Id == toggleService.NavSubmenuId)
-                                {
-                                    @if (departments.Options.Count != 0)
-                                    {
-                                        <table class="table table-striped table-sm border">
-                                            <thead>
-                                                <tr>
-                                                    <th>Options</th>
-                                                    <th style="text-align:center">Active</th>
-                                                    <th style="text-align:center">Edit</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var option in departments.Options)
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end" @onclick="@(() => BackToFaculties())">
+                        Faculties
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                </h6>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped border">
+                        <thead class="bg-light">
+                            <tr>
+                                <th></th>
+                                <th>Department</th>
+                                <th style="text-align:center">Active</th>
+                                <th style="text-align:center">Edit Depts</th>
+                                <th style="text-align:center">View Opts</th>
+                            </tr>
+                        </thead>
+                        <tbody class="@toggleService.NavMenuCssClass">
+                            <Virtualize Items="departmentService.AdminResponse.Departments" Context="departments">
+                                <tr>
+                                    <td>
+                                        <div>
+                                            <a class="nav-link px-1" @onclick="() => toggleService.TogleSubmenu(departments.Id)">
+                                                @if (departments.Id == toggleService.NavSubmenuId && departments.Options.Count != 0)
                                                 {
-                                                    <tr>
-                                                        <td>
-                                                            <span>@option.Name - (@option.Abbreviation)</span>
-                                                        </td>
-                                                        <td style="text-align:center">
-                                                            <span>@(option.IsActive ? "✔️" : "❌")</span>
-                                                        </td>
-                                                        <td style="text-align:center">
-                                                            <span>
-                                                                <a class="btn btn-outline-primary btn-sm" title="Edit Option" @onclick="(() => EditOption(option.Id))">
-                                                                    <i class="oi oi-pencil"></i>
-                                                                </a>
-                                                            </span>
-                                                        </td>
-                                                    </tr>
+                                                    <span class="oi oi-minus" aria-hidden="true"></span>
                                                 }
-                                            </tbody>
-                                        </table>
-                                    }
-                                }
-                            </div>
-                        </td>
-                        <td style="text-align:center">@(departments.IsActive ? "✔️" : "❌")</td>
-                        <td class="my-text-align-center">
-                            <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditDepartment(departments.Id))" title="Edit Department">
-                                <i class="oi oi-pencil"></i>
-                            </button>
-                        </td>
-                        <td style="text-align:center">
-                            <button class="btn btn-outline-success btn-sm position-relative" @onclick="(() => ViewOptions(departments.Id))" title="View Options">
-                                <i class="oi oi-eye"></i>
-                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: teal;">
-                                    @departments.Options.Count
-                                </span>
-                            </button>
-                        </td>
-                    </tr>
-                </Virtualize>
-            </tbody>
-        </table>
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToFaculties())">
-            Faculties
-            <i class="oi oi-caret-right"></i>
-        </button>
-        <br /><br />
+                                                else if (departments.Options.Count != 0)
+                                                {
+                                                    <span class="oi oi-plus" aria-hidden="true"></span>
+                                                }
+                                            </a>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <span>@departments.Name - (@departments.Abbreviation)</span>
+                                        <div class="px-3">
+                                            @if (departments.Id == toggleService.NavSubmenuId)
+                                            {
+                                                @if (departments.Options.Count != 0)
+                                                {
+                                                    <table class="table table-striped table-sm border">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Options</th>
+                                                                <th style="text-align:center">Active</th>
+                                                                <th style="text-align:center">Edit</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @foreach (var option in departments.Options)
+                                                            {
+                                                                <tr>
+                                                                    <td>
+                                                                        <span>@option.Name - (@option.Abbreviation)</span>
+                                                                    </td>
+                                                                    <td style="text-align:center">
+                                                                        <span>@(option.IsActive ? "✔️" : "❌")</span>
+                                                                    </td>
+                                                                    <td style="text-align:center">
+                                                                        <span>
+                                                                            <a class="btn btn-outline-primary btn-sm" title="Edit Option" @onclick="(() => EditOption(option.Id))">
+                                                                                <i class="oi oi-pencil"></i>
+                                                                            </a>
+                                                                        </span>
+                                                                    </td>
+                                                                </tr>
+                                                            }
+                                                        </tbody>
+                                                    </table>
+                                                }
+                                            }
+                                        </div>
+                                    </td>
+                                    <td style="text-align:center">@(departments.IsActive ? "✔️" : "❌")</td>
+                                    <td class="my-text-align-center">
+                                        <button class="btn btn-outline-primary btn-sm" @onclick="(() => EditDepartment(departments.Id))" title="Edit Department">
+                                            <i class="oi oi-pencil"></i>
+                                        </button>
+                                    </td>
+                                    <td style="text-align:center">
+                                        <button class="btn btn-outline-success btn-sm position-relative" @onclick="(() => ViewOptions(departments.Id))" title="View Options">
+                                            <i class="oi oi-eye"></i>
+                                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: teal;">
+                                                @departments.Options.Count
+                                            </span>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </Virtualize>
+                        </tbody>
+                    </table>
+                    <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToFaculties())">
+                        Faculties
+                        <i class="oi oi-caret-right"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     }
 
 </div>
