--- a/Eduversity.com/Client/Pages/Admin/Faculties/EditDepartmentOption.razor
+++ b/Eduversity.com/Client/Pages/Admin/Faculties/EditDepartmentOption.razor
@@ -17,15 +17,15 @@
     {
         <h3 class="my-main-title">Edit Option - "@option.Name", Department of @DepartmentName, Faculty of @FacultyName</h3><hr />
 
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToFaculties())">
+        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToFaculties())">
             Faculties
             <i class="oi oi-caret-right"></i>
         </button>
-        <button type="button" class="btn btn-outline-primary float-end mb-3 mx-1" @onclick="@(() => BackToDepartments())">
+        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3 mx-3" @onclick="@(() => BackToDepartments())">
             Depts
             <i class="oi oi-caret-right"></i>
         </button>
-        <button type="button" class="btn btn-outline-primary float-end mb-3" @onclick="@(() => BackToOptions())">
+        <button type="button" class="btn btn-outline-primary btn-sm float-end mb-3" @onclick="@(() => BackToOptions())">
             Opts
             <i class="oi oi-caret-right"></i>
         </button>
@@ -47,12 +47,12 @@
             <div class="row">
                 <div class="col-10"></div>
                 <div class="col-5">
-                    <InputText id="optionName" @bind-Value="option.Name" class="form-control" placeholder="Enter Option Name" maxlength="50" required></InputText>
+                    <InputText id="optionName" @bind-Value="option.Name" class="form-control form-control-sm" placeholder="Enter Option Name" maxlength="50" required></InputText>
                     <ValidationMessage For="@(() => option.Name)" />
                     <div class="invalid-feedback">Please enter the option name</div>
                 </div>
                 <div class="col-3">
-                    <InputText id="optionAbbreviation" @bind-Value="option.Abbreviation" class="form-control" placeholder="Abbreviation" maxlength="3" required></InputText>
+                    <InputText id="optionAbbreviation" @bind-Value="option.Abbreviation" class="form-control form-control-sm" placeholder="Abbreviation" maxlength="3" required></InputText>
                     <ValidationMessage For="@(() => option.Abbreviation)" />
                     <div class="invalid-feedback">Please enter the abbreviation</div>
                 </div>
@@ -62,11 +62,11 @@
             </div>
             <hr>
 
-            <button type="submit" class="btn btn-success float-start">@btnSubmitButtonText</button>
+            <button type="submit" class="btn btn-success btn-sm float-start">@btnSubmitButtonText</button>
         </EditForm>
         @if (!option.IsNew)
         {
-            <button type="button" class="btn btn-danger float-end" @onclick="DeleteOption">
+            <button type="button" class="btn btn-danger btn-sm float-end" @onclick="DeleteOption">
                 Delete Option
             </button>
         }
